ChangeLog 'ClusteringSuite'

2018-09-20 German Llort <german.llort@bsc.es> 
	* Fixes parsing of HWC_CHANGE_EVT from wrong type 42009999 to correct type 41999999

2018-05-31 German Llort <german.llort@bsc.es> via Dave Love <loveshack>
	* Adds missing $(DESTDIR) in the install paths to allow RPM generation (closes #1)

2018-05-24 German Llort <german.llort@bsc.es>
	+ Stardardise versioning
	- Remove deprecated autogen* scripts

2018-04-16 German Llort <german.llort@bsc.es>
	* Fixed LD_LIBRARY_PATH to look for libraries under lib and lib64

2017-10-31 German Llort <german.llort@bsc.es>
	+ Added backwards compatibility to the old pcfparser

2016-06-30 German Llort <german.llort@bsc.es>
	+ Added macro to search for the libstdc++ path to add an rpath. 

2016-03-31 German Llort <german.llort@bsc.es>
	* Upgraded pcfparser to the version found in the libtools package v1.0.4

2016-03-23 German Llort <german.llort@bsc.es>
	* Fixed wrong dependency with MPI when enabling the TDBSCAN support: it was hardcoded to use Marenostrum's OpenMPI, now is specified at configure time with --with-mpi.

2016-03-21 German Llort <german.llort@bsc.es>
	* Fixed namespace conflict in #define MPI with Intel MPI and OpenMPI

2016-03-11 Eloy Martinez <eloy.martinez@bsc.es>
	* Fixed system messages for proper updates of the progress within Paraver

2015-12-17 German Llort <german.llort@bsc.es>
	* Updated boost.m4 

2015-11-06 German Llort <german.llort@bsc.es>
	* Fixed bug in the parsing of the PCF file for the description of hardware counter events.

2015-11-04 German Llort <german.llort@bsc.es>
	* Fixed bug in the parsing of intercommunicators in the input trace.
	* Upgraded revision to 2.6.6.

2015-10-14 German Llort <german.llort@bsc.es>
	* Code adapted to use Synapse library 2.0 instead of the older version libmrnapp.

2015-01-23 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Solved a regression that broke the sampling version of the
	clustering tool
